New SQL schema, with foreign keys between tables, new DictionaryObject table, and descendants tables like Word